--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@rollup/plugin-typescript": "^8.3.3",
     "rollup": "^2.75.7",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-scss": "3",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.53.0",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
