--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.3",
     "rollup": "^2.75.7",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-copy-watch": "^0.0.1",
     "rollup-plugin-scss": "3",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.53.0",
@@ -12,6 +12,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "build": "rollup --config"
+    "build": "rollup -c",
+    "dev": "rollup -cw"
   }
 }
