Initialize paleo conversion

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "tatqan",
   "packageManager": "yarn@3.2.1",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "he2paleo": "^0.1.0",
     "rollup": "^2.75.7",
     "rollup-plugin-copy-watch": "^0.0.1",
     "rollup-plugin-scss": "3",
