--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "he2paleo": "^0.1.0",
+    "rimraf": "^3.0.2",
     "rollup": "^2.75.7",
     "rollup-plugin-copy-watch": "^0.0.1",
     "rollup-plugin-scss": "3",
@@ -16,6 +17,7 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -cw"
+    "dev": "rollup -cw",
+    "clean": "rimraf dist"
   }
 }
