--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "he2paleo": "^0.1.0",
+    "is-mobile": "^3.1.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.75.7",
     "rollup-plugin-copy-watch": "^0.0.1",
