--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tatqan",
   "packageManager": "yarn@3.2.1",
   "devDependencies": {
+    "@ampproject/rollup-plugin-closure-compiler": "^0.27.0",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
