--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.75.7",
     "rollup-plugin-copy-watch": "^0.0.1",
+    "rollup-plugin-minify-html": "^0.1.2",
     "rollup-plugin-scss": "3",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.53.0",
