--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.53.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "unniqqud": "^0.1.0"
   },
   "scripts": {
     "build": "rollup -c",
